# bash-like-utils

./: Cargo.toml  README.md
.github/workflows/: github-actions-demo.yml
src/: lib.rs
