[package]
name = "bash-like-utils"
version = "0.2.0"
authors = ["Ivan I. Grushin <iigrushin@gmail.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "A library of bash-like utils"
readme = "README.md"
homepage = "https://github.com/mcgru/bash-like-utils"
repository = "https://github.com/mcgru/bash-like-utils"
keywords = ["bash", "dirname", "basename"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
